--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,12 +1,181 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-    <h1>Hello bharath</h1>
-  </body>
+<!doctype html>
+<html lang="en">
+<head>
+  <title>MindVoice :: words to be felt!</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="stylesheet" href='.././public/stylesheets/style.css'>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <style>
+    .customBorder
+    {
+      border-style: solid;
+      border-width: 5px;
+      background-image: url("../images/wood.jpg");
+    }
+    .brand
+    {
+      font-family: 'Lobster Two',cursive;
+      font-size:27px;
+    }
+    .carouselQuote
+    {
+      font-family: 'Lobster Two',cursive;
+      font-size:40px;
+      padding-bottom: 80px;
+      color: white;
+    }
+
+    .carousel-item {
+      height: 400px;
+      background-image:url("../images/galaxy.gif");
+    }
+
+    .quoteAuthor
+    {
+      text-align: right;
+      font-size: 22px;
+    }
+
+    .textBox
+    {
+      border-color:black;
+      border-width: 2px;
+      margin-bottom: 10px;
+    }
+
+    .customBg{
+      background-image: url("../images/paper.jpg");
+      height: 100%;
+      background-position: center top;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    .wallCSS
+    {
+      font-family: 'Lobster Two',cursive;
+      font-size:25px;
+      padding-top: 50px;
+      padding-bottom: 50px;
+      align-items: center;
+    }
+  </style>
+
+
+
+</head>
+<body>
+
+<!-- my navbar-->
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded justify-content-center customBorder">
+  <a class="navbar-brand" href="https://www.facebook.com/mindvoicepage"><span class="brand">MindVoice</span></a>
+</nav>
+
+<!--quote carousel-->
+
+<div id="quoteCarousel" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#quoteCarousel" data-slide-to="0"></li>
+    <li data-target="#quoteCarousel" data-slide-to="1"></li>
+    <li data-target="#quoteCarousel" data-slide-to="2"></li>
+    <li data-target="#quoteCarousel" data-slide-to="3" class="active"></li>
+    <li data-target="#quoteCarousel" data-slide-to="4"></li>
+    <li data-target="#quoteCarousel" data-slide-to="5"></li>
+    <li data-target="#quoteCarousel" data-slide-to="6"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item">
+      <div class="carousel-caption carouselQuote">
+        "Get up... Gear up...<br/>
+        Mess up... Screw up...<br/>
+        But never give up!"
+        <br/>
+        <p class="quoteAuthor">~Prasanthtootcat</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="carousel-caption carouselQuote">
+        "Learning to be yourself<br/>is the first part of<br/>
+        finding yourself!"
+        <br/>
+        <p class="quoteAuthor">~Prasanthtootcat</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="carousel-caption carouselQuote">
+        "Push yourself until the cameras click your<br/>
+        success story"
+        <br/>
+        <p class="quoteAuthor">~Prasanthtootcat</p>
+      </div>
+    </div>
+    <div class="carousel-item active">
+      <div class="carousel-caption carouselQuote">
+        "You can do anything you set your mind to man"
+        <br/>
+        <p class="quoteAuthor">~Eminem</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="carousel-caption carouselQuote">
+        "Somewhere someday you will be the most precious gift for someone"
+        <br/>
+        <p class="quoteAuthor">~Prasanthtootcat</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="carousel-caption carouselQuote">
+        "Didn't learn to be happy<br/>
+        Learned to let go of hurt & smile"
+        <br/>
+        <p class="quoteAuthor">~Prasanthtootcat</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <div class="carousel-caption carouselQuote">
+        "Spoon full of kindness can give<br/>a bowl
+        full of happiness!"
+        <br/>
+        <p class="quoteAuthor">~Prasanthtootcat</p>
+      </div>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#quoteCarousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#quoteCarousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<!-- Login form-->
+<div class="customBg">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4"></div>
+      <div class="col-md-4">
+        <p class="wallCSS" style="color: black;">Would you like to visit our &nbsp;
+          <button type="button" class="btn btn-dark btn-lg">Wall</button></p>
+
+        <form method="post" action="#" role="login" id="login_form">
+          <input type="email" id="email" placeholder="Email" required class="form-control input-lg textBox"/>
+          <input type="password" class="form-control input-lg textBox" id="password" placeholder="Password" required/>
+          <button type="submit" id="btn_submit" class="btn btn-lg btn-primary btn-block">Sign in</button>
+          <div>
+            <br/>
+          </div>
+        </form>
+      </div>
+      <div class="col-md-4"></div>
+    </div>
+  </div>
+</div>
+</body>
 </html>
