--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,70 +4,12 @@
   <title>MindVoice :: words to be felt!</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href='.././public/stylesheets/style.css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <style>
-    .customBorder
-    {
-      border-style: solid;
-      border-width: 5px;
-      background-image: url("../images/wood.jpg");
-    }
-    .brand
-    {
-      font-family: 'Lobster Two',cursive;
-      font-size:27px;
-    }
-    .carouselQuote
-    {
-      font-family: 'Lobster Two',cursive;
-      font-size:40px;
-      padding-bottom: 80px;
-      color: white;
-    }
-
-    .carousel-item {
-      height: 400px;
-      background-image:url("../images/galaxy.gif");
-    }
-
-    .quoteAuthor
-    {
-      text-align: right;
-      font-size: 22px;
-    }
-
-    .textBox
-    {
-      border-color:black;
-      border-width: 2px;
-      margin-bottom: 10px;
-    }
-
-    .customBg{
-      background-image: url("../images/paper.jpg");
-      height: 100%;
-      background-position: center top;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-
-    .wallCSS
-    {
-      font-family: 'Lobster Two',cursive;
-      font-size:25px;
-      padding-top: 50px;
-      padding-bottom: 50px;
-      align-items: center;
-    }
-  </style>
-
-
-
+  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
 
